# BlueArchive-Starter-cli

./: .gitignore  LICENSE  README-en.md  README.md  build_dependencies.py  create_ocr_env.bat  distribute.py  evaluate_images.py  main.py  pack.bat  package.sh  pdm.toml  pyproject.toml  save.json  script.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_main.yml
data/16_9/: mapping.json
img_comparator/: Entry.py  ImageComparator.evb  pack.bat  requirements.txt
img_comparator/app/: Client.py  MainWindow.py
img_comparator/app/ui/: MainWindow.ui
scripts/: create_ocr_env.bat  create_ocr_env.sh  distribute.py  distribute2.py  package.sh
tests/: test_cmp.py  test_ocr.py
utils/: adb.py  box_scan.py  cmp.py  cmp_server.py  evaluate_images.py  ocr.py  settings.py
utils/image_compare/: __init__.py  cv2_compare.py  pil_compare.py
