[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ACGN-Alliance", email = "mrslouzk@qq.com"},
]
dependencies = [
    "pillow>=10.1.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.1",
    "nuitka>=1.8.5",
    "black>=23.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

