[project]
name = ""
version = ""
description = ""
authors = [
    { name = "ACGN-Alliance", email = "mrslouzk@qq.com" },
]
dependencies = [
    "pillow>=10.1.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.1",
    "urllib3>=2.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
main = "python main.py"
build_main = "python ./scripts/distribute.py --build_main"
build_ocr = "python ./scripts/distribute.py --build_ocr"
build_test = "python ./scripts/distribute2.py --build_main -v 1.0.0.0"
build_all = { composite = ["build_main", "build_ocr"] }

